# SigmaSight-BE

./: .env  .env.example  .gitignore  API_DOCUMENTATION.md  CASCADE_PROMPTS.md  CHATGPT_INTEGRATION.md  CLAUDE.md  COMPLETE_IMPLEMENTATION_GUIDE.md  COMPREHENSIVE_E2E_TESTING_REPORT.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SYNC_REPORT_2025-08-28.md  DOCUMENTATION_SYNC_REPORT_2025-08-29.md  README.md  TODO.md  TROUBLESHOOTING_GUIDE.md  USER_GUIDE.md  branch_test.txt  claude_agents_setup.md  package-lock.json  pyproject.toml  railway.json  screenshot_current.js  screenshot_updated.js  setup.bat  test_full_application.py
.claude/: settings.local.json
sigmasight-backend/: .env.example  .gitignore  AI_AGENT_REFERENCE.md  BATCH_PROCESSING_TEST_PLAN.md  BATCH_TESTING_PRAGMATIC.md  CLAUDE.md  COMPLETE_WORKFLOW_GUIDE.md  MAC_INSTALL_GUIDE.md  POLYGON_API_ANALYSIS.md  POLYGON_ENDPOINTS_NEEDED.md  QUICK_START_WINDOWS.md  README.md  TEAM_SETUP.md  TESTING_GUIDE.md  TODO.md  TODO1.md  TODO2.md  WINDOWS_SETUP_GUIDE.md  detailed_git_history_ending_0718.txt  pyproject.toml  run.py  sample_portfolio.csv  setup.sh  todo1.md  todo2.md  tradefeeds_support_email.md
sigmasight-backend/_docs/: Calculation_Engine_White_Paper.md
sigmasight-backend/alembic/: env.py
sigmasight-backend/api_test_results/: COMPARISON_REPORT.md  DECISION_SUMMARY.md  FMP_SPXL_holdings.csv  FMP_VBTLX_holdings.csv  FMP_VFINX_holdings.csv  FMP_VTI_holdings.csv  expanded_mutual_fund_coverage.json  mutual_fund_coverage_report.csv  scenario_1a_tradefeeds_results.json  scenario_2_fmp_results.json
sigmasight-backend/app/: config.py  database.py  main.py
sigmasight-backend/docs/: BATCH_SCRIPTS_ANALYSIS.md
sigmasight-backend/scripts/: analyze_demo_portfolio_calculation_failure.py  backfill_factor_etfs.py  backfill_position_symbols.py  check_tables.py  debug_multivariate_regression.py  export_factor_etf_data.py  init_database.py  investigate_beta_calculation.py  reset_and_seed.py  run_batch_calculations.py  run_batch_with_report.py  run_batch_with_reports.py  seed_database.py  seed_demo_users.py  setup_dev_database.py  setup_dev_database_alembic.py  setup_minimal_demo.py  test_auth.py  test_clean_provider_boundaries.py  test_database_regression.py  test_factor_calculations.py  test_greeks.py  test_market_data.py  test_market_risk.py  test_option_b_fix.py  test_post_yfinance_removal.py  test_stress_testing.py  verify_factor_data.py
sigmasight-backend/setup-guides/: MAC_INSTALL_GUIDE.md  QUICK_START_WINDOWS.md  README.md  TEAM_SETUP.md  WINDOWS_SETUP_GUIDE.md
sigmasight-backend/test-docs/: BATCH_PROCESSING_TEST_PLAN.md
(+573 files in other folders)
